2015-05-28  Daniel Hahler  <zsh@thequod.de>

	* 35098: Completion/Unix/Command/_git: provide --amend also with
	"message" group.

2015-05-28  Oliver Kiddle  <opk@zsh.org>

	* 35315: Completion/Unix/Command/_git, Completion/X/Command/_matlab;
	replace inappropriate uses of _path_commands

2015-05-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 35318: Doc/Zsh/builtins.yo, Doc/Zsh/options.yo, Src/builtin.c,
	Src/exec.c: POSIX_BUILTINS compatibility for OPTIND processing
	in getopts.

2015-05-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35306: Src/parse.c, Test/C02cond.ztst: "test -z \("
	failed owing to overeager parsing.

	* unposted: Config/version.mk: 5.0.7-dev-4.

2015-05-27  Daniel Hahler  <zsh@thequod.de>

	* 35285: Functions/Chpwd/_cdr: fix zstyle lookup for
	recent-dirs-insert.

	* 35286: Completion/Unix/Command/_baz, Completion/Unix/Command/_tla:
	fix zstyle lookups with _baz and _tla.

	* 35293: Completion/Unix/Command/_php: fix zstyle lookup with
	_php: use trailing colon.

2015-05-27  Peter Stephenson  <p.stephenson@samsung.com>

	* Han Pingtian: 35299: Functions/Zftp/zfdir: improve effect of
	zfdir -r.

2015-05-26  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35289: Doc/Zsh/builtions.yo: fix typos in the description
	of emulate builtin (based on 34981 by Han Pingtian)

2015-05-26  Peter Stephenson  <p.stephenson@samsung.com>

	* see 35268: revert 34476 (ae7dcab) as it seems to be having
	effects beyond the intended optimisation of completion caching.
	To be investigated further after the release.

	* Han Pingtian: 35295: Functions/Zftp/zfcd_match: be more
	inventive zftp directory listing.

	* Eric Cook: 35292: Completion/Redhat/Command/_yum: complete
	installation of local files.

2015-05-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 35127#1: Src/Zle/compcore.c Src/Zle/computil.c: Fix
	_describe/compdescribe problem with unsorted groups

2015-05-22  Peter Stephenson  <p.w.stephenson@ntlworld.com>
